Changes for 2.3.2

New features:
..F....... [ZBXNEXT-2344] added links on group names in "Web monitoring" widget (Ivo)
A.F....... [ZBX-1357] updated Polish, Russian and Slovak translations; thanks to Zabbix translators (Richlv)
..F....... [ZBX-7399] improved multiselect by adding popup select window (Oleg)
..F....... [ZBX-8113] setup now stores info in session instead of cookies (Andrejs)

Bug fixes:
A.F....... [ZBX-8334] fixed selecting group prototypes in HostPrototype::get() using Oracle backend (Andrejs)
..F....... [ZBX-8320] corrected help item strings by removing double spaces in sentences and "IP" used in uppercase letters (Ivo)
.......PS. [ZBX-8061] fixed vmware cluster functions returning notsupported despite clusters being discovered normally (wiper)
........S. [ZBX-8348] fixed processing of lld triggers; functions in a trigger expression could be not on the places (Sasha)
..F....... [ZBX-8053] changed label "Latest data" to "Monitoring" in host inventory view (Ivo)
..F....... [ZBX-8333] renamed screen item add, update and delete messages (Ivo)
..F....... [ZBX-8197] fixed all data not being shown on graph if period is set to or more than 2 years (Krists)
..F....... [ZBX-8330] fixed bug with grouped buttons in discovery rules for SNMP checks (Andrejs)
..F....... [ZBX-8318] added "d. m. Y" date format to recognized formats in frontend and set "Y-m-d H:i:s" as fallback (Krists)
..F....... [ZBXNEXT-2124] fixed submap problem count calculation in Monitoring / Maps when application filters are active (Krists)
..F....... [ZBX-8301] restricted "unique" attribute to Zabbix agent & SNMP checks in discovery rule creation (Andrejs)
.......PS. [ZBX-8095] fixed a bug in item queue that updated item's nextcheck but not its position in the queue (asaveljevs)
...G...PS. [ZBX-8343] fixed a bug in binary heap that could cause a slightly inconsistent ordering of elements in the queue (asaveljevs)