@@ -147,7 +147,7 @@ form { margin: 0; }
 .input:focus { border-color: #6e8ab4; }
 .input:hover { border-color: #6e8ab4; }
 .input[readonly] { border-color: #D0D0D0; background-color: #EEEEEE; }
-.input[disabled] { color: #ACA899; cursor: default; }
+.input[disabled] { border-color: #d0d0d0; background-color: #eee; color: #aca899; cursor: default; }
 .input[disabled]:focus { text-decoration: none; border-color: #ACA899; }
 .input[disabled]:hover { text-decoration: none; border-color: #ACA899; }
 .input option { color: #000000; }
@@ -161,10 +161,10 @@ input[type="button"],
 input[type="submit"],
 input[type="reset"],
 input[type="file"] { height: auto; }
-input[type="button"].formlist { vertical-align: top; margin-bottom: 1px; cursor: pointer; background: #ffffff; height: 20px; }
+input[type="button"].formlist { vertical-align: top; margin-bottom: 1px; cursor: pointer; background: #fff; height: 20px; }
 input[type="submit"].formlist { vertical-align: top; margin-bottom: 1px; cursor: pointer; height: 20px; }
 input[type="button"].input[disabled].formlist,
-input[type="submit"].input[disabled].formlist { cursor: default; }
+input[type="submit"].input[disabled].formlist { cursor: default; background: #fff; border-color: #aca899; }
 input.jqueryinput,
 .jqueryinputset input[type="button"],
 .jqueryinputset input[type="submit"] { height: auto; }
@@ -188,7 +188,7 @@ textarea.textarea_big { height: auto; }
 	text-decoration: none; padding: 1px 1px 0 1px; margin: 0; cursor: pointer;
 }
 .link_menu:hover { color: #6C80B9; border-bottom-color: #6C80B9; }
-.link_menu[disabled] { color: #DDD; cursor: default; border: 0; }
+.link_menu[disabled] { color: #ddd; cursor: default; border: 0; background-color: white; }
 .link_menu[disabled]:hover { border: 0; }
 
 /* transparent - must be after input! */
