@@ -1,6 +1,7 @@
 Changes for 2.3.2
 
 New features:
+..F....... [ZBX-8329] added styling for disabled buttons and inputs (Andrejs)
 ..F....... [ZBXNEXT-2344] added links on group names in "Web monitoring" widget (Ivo)
 A.F....... [ZBX-1357] updated Polish, Russian and Slovak translations; thanks to Zabbix translators (Richlv)
 ..F....... [ZBX-7399] improved multiselect by adding popup select window (Oleg)
